updated html file

--- a/01_Climate_tense_analysis.html
+++ b/01_Climate_tense_analysis.html
@@ -233,6 +233,148 @@ df$tense_lumpbad[which(df$tense=='unclear' | df$tense=='inconsistent')] = 'uncle
 #&gt; x       past implicit past present implicit present unclear_inconsistent
 #&gt;   TRUE  21.1          15.8    33.7             13.7                 15.8
 #&gt;   FALSE 25.0          10.0    46.2              6.2                 12.5</code></pre>
+<p>Some more cross tabulations</p>
+<pre class="r"><code>t1 &lt;- CrossTable(df$climate_date_range, df$citation)</code></pre>
+<pre><code>#&gt; 
+#&gt;  
+#&gt;    Cell Contents
+#&gt; |-------------------------|
+#&gt; |                       N |
+#&gt; | Chi-square contribution |
+#&gt; |           N / Row Total |
+#&gt; |           N / Col Total |
+#&gt; |         N / Table Total |
+#&gt; |-------------------------|
+#&gt; 
+#&gt;  
+#&gt; Total Observations in Table:  176 
+#&gt; 
+#&gt;  
+#&gt;                       | df$citation 
+#&gt; df$climate_date_range |           |     FALSE |      TRUE | Row Total | 
+#&gt; ----------------------|-----------|-----------|-----------|-----------|
+#&gt;                 FALSE |         0 |        39 |        50 |        89 | 
+#&gt;                       |     0.506 |     0.052 |     0.080 |           | 
+#&gt;                       |     0.000 |     0.438 |     0.562 |     0.506 | 
+#&gt;                       |     0.000 |     0.487 |     0.526 |           | 
+#&gt;                       |     0.000 |     0.222 |     0.284 |           | 
+#&gt; ----------------------|-----------|-----------|-----------|-----------|
+#&gt;                  TRUE |         1 |        41 |        45 |        87 | 
+#&gt;                       |     0.517 |     0.054 |     0.082 |           | 
+#&gt;                       |     0.011 |     0.471 |     0.517 |     0.494 | 
+#&gt;                       |     1.000 |     0.512 |     0.474 |           | 
+#&gt;                       |     0.006 |     0.233 |     0.256 |           | 
+#&gt; ----------------------|-----------|-----------|-----------|-----------|
+#&gt;          Column Total |         1 |        80 |        95 |       176 | 
+#&gt;                       |     0.006 |     0.455 |     0.540 |           | 
+#&gt; ----------------------|-----------|-----------|-----------|-----------|
+#&gt; 
+#&gt; </code></pre>
+<pre class="r"><code>res1 &lt;-apply(t1$prop.row,2,function(x) {round(x*100,1)})
+
+t1 &lt;- CrossTable(df$climate_data_source, df$geographic_extent_of_study)</code></pre>
+<pre><code>#&gt; 
+#&gt;  
+#&gt;    Cell Contents
+#&gt; |-------------------------|
+#&gt; |                       N |
+#&gt; | Chi-square contribution |
+#&gt; |           N / Row Total |
+#&gt; |           N / Col Total |
+#&gt; |         N / Table Total |
+#&gt; |-------------------------|
+#&gt; 
+#&gt;  
+#&gt; Total Observations in Table:  172 
+#&gt; 
+#&gt;  
+#&gt;                        | df$geographic_extent_of_study 
+#&gt; df$climate_data_source | continental |      global |    regional |        site |   Row Total | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;                        |           0 |           0 |           1 |           0 |           1 | 
+#&gt;                        |       0.052 |       0.035 |       1.349 |       0.581 |             | 
+#&gt;                        |       0.000 |       0.000 |       1.000 |       0.000 |       0.006 | 
+#&gt;                        |       0.000 |       0.000 |       0.018 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.006 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;                  atlas |           0 |           0 |           1 |           0 |           1 | 
+#&gt;                        |       0.052 |       0.035 |       1.349 |       0.581 |             | 
+#&gt;                        |       0.000 |       0.000 |       1.000 |       0.000 |       0.006 | 
+#&gt;                        |       0.000 |       0.000 |       0.018 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.006 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;            ECHAM 4 GCM |           0 |           1 |           0 |           0 |           1 | 
+#&gt;                        |       0.052 |      26.702 |       0.331 |       0.581 |             | 
+#&gt;                        |       0.000 |       1.000 |       0.000 |       0.000 |       0.006 | 
+#&gt;                        |       0.000 |       0.167 |       0.000 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.006 |       0.000 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;                 global |           0 |           0 |           1 |           0 |           1 | 
+#&gt;                        |       0.052 |       0.035 |       1.349 |       0.581 |             | 
+#&gt;                        |       0.000 |       0.000 |       1.000 |       0.000 |       0.006 | 
+#&gt;                        |       0.000 |       0.000 |       0.018 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.006 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;                  mixed |           0 |           0 |           1 |           1 |           2 | 
+#&gt;                        |       0.105 |       0.070 |       0.172 |       0.023 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.500 |       0.500 |       0.012 | 
+#&gt;                        |       0.000 |       0.000 |       0.018 |       0.010 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.006 |       0.006 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;       multiple sources |           1 |           1 |          13 |           7 |          22 | 
+#&gt;                        |       0.020 |       0.070 |       4.471 |       2.622 |             | 
+#&gt;                        |       0.045 |       0.045 |       0.591 |       0.318 |       0.128 | 
+#&gt;                        |       0.111 |       0.167 |       0.228 |       0.070 |             | 
+#&gt;                        |       0.006 |       0.006 |       0.076 |       0.041 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;            name_of_GCM |           1 |           1 |           3 |           0 |           5 | 
+#&gt;                        |       2.084 |       3.908 |       1.089 |       2.907 |             | 
+#&gt;                        |       0.200 |       0.200 |       0.600 |       0.000 |       0.029 | 
+#&gt;                        |       0.111 |       0.167 |       0.053 |       0.000 |             | 
+#&gt;                        |       0.006 |       0.006 |       0.017 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;          not_specified |           3 |           2 |          15 |          42 |          62 | 
+#&gt;                        |       0.018 |       0.012 |       1.497 |       0.983 |             | 
+#&gt;                        |       0.048 |       0.032 |       0.242 |       0.677 |       0.360 | 
+#&gt;                        |       0.333 |       0.333 |       0.263 |       0.420 |             | 
+#&gt;                        |       0.017 |       0.012 |       0.087 |       0.244 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;                  PRISM |           0 |           0 |           2 |           0 |           2 | 
+#&gt;                        |       0.105 |       0.070 |       2.698 |       1.163 |             | 
+#&gt;                        |       0.000 |       0.000 |       1.000 |       0.000 |       0.012 | 
+#&gt;                        |       0.000 |       0.000 |       0.035 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.012 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;               regional |           0 |           0 |           5 |           1 |           6 | 
+#&gt;                        |       0.314 |       0.209 |       4.561 |       1.775 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.833 |       0.167 |       0.035 | 
+#&gt;                        |       0.000 |       0.000 |       0.088 |       0.010 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.029 |       0.006 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;              site data |           0 |           0 |           1 |          24 |          25 | 
+#&gt;                        |       1.308 |       0.872 |       6.406 |       6.164 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.040 |       0.960 |       0.145 | 
+#&gt;                        |       0.000 |       0.000 |       0.018 |       0.240 |             | 
+#&gt;                        |       0.000 |       0.000 |       0.006 |       0.140 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;           station data |           4 |           0 |          14 |          25 |          43 | 
+#&gt;                        |       1.361 |       1.500 |       0.004 |       0.000 |             | 
+#&gt;                        |       0.093 |       0.000 |       0.326 |       0.581 |       0.250 | 
+#&gt;                        |       0.444 |       0.000 |       0.246 |       0.250 |             | 
+#&gt;                        |       0.023 |       0.000 |       0.081 |       0.145 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;              worldclim |           0 |           1 |           0 |           0 |           1 | 
+#&gt;                        |       0.052 |      26.702 |       0.331 |       0.581 |             | 
+#&gt;                        |       0.000 |       1.000 |       0.000 |       0.000 |       0.006 | 
+#&gt;                        |       0.000 |       0.167 |       0.000 |       0.000 |             | 
+#&gt;                        |       0.000 |       0.006 |       0.000 |       0.000 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt;           Column Total |           9 |           6 |          57 |         100 |         172 | 
+#&gt;                        |       0.052 |       0.035 |       0.331 |       0.581 |             | 
+#&gt; -----------------------|-------------|-------------|-------------|-------------|-------------|
+#&gt; 
+#&gt; </code></pre>
+<pre class="r"><code>res2 &lt;-apply(t1$prop.row,2,function(x) {round(x*100,1)})</code></pre>
 </div>
 
 
